# python-project-52

./: .env  .gitignore  Dockerfile  Makefile  README.md  build.sh  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: sonar.yml  sonarcloud.yml
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
labels/: models.py  views.py
labels/migrations/: 0001_initial.py
locale/de/LC_MESSAGES/: django.po
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
staticfiles/css/: custom.css
statuses/: admin.py  forms.py  models.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/: apps.py  settings.py  signals.py  urls.py  views.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/statuses/: admin.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0006_alter_task_labels.py  0007_alter_task_labels.py  0008_alter_task_labels.py  0009_alter_task_labels.py
task_manager/templates/: base.html
task_manager/users/: forms.py  urls.py  views.py
tasks/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_labels.py  0003_alter_task_executor.py  0004_alter_task_executor.py  0005_alter_task_labels.py
templates/: 403.html  base.html  index.html
templates/labels/: create.html  delete.html  list.html  update.html
templates/registration/: login.html
templates/statuses/: create.html  delete.html  list.html  update.html
templates/tasks/: create.html  delete.html  detail.html  list.html  update.html
templates/users/: create.html  delete.html  list.html  update.html
tests/: conftest.py  test_statuses.py  test_tasks.py  test_users.py  tests_labels.py
users/: forms.py  urls.py  views.py
(+7 files in other folders)
