[project]
name = "hexlet-code"
version = "0.1.0"
description = "Менеджер задач."
readme = "README.md"
requires-python = ">=3.13"

authors = [{ name = "Pavel Anikin", email = "PavelDidko@gmail.com" }]

dependencies = [
  "ruff>=0.13.2",
  "uv>=0.5.16",
  "django>=5.2.5",
  "gunicorn>=23.0.0",
  "psycopg2-binary>=2.9.9",
  "python-dotenv>=0.21.0",
  "requests>=2.32.4",
  "dj-database-url>=2.3.0",
  "django-bootstrap5>=24.3",
  "django-filter>=24.3",
  "pytest>=8.4.2",
  "pytest-django>=4.11.1",
]

[tool.setuptools]
packages = ["task_manager"]
package-dir = {"" = "."}
package-data = {"task_manager" = ["templates/*"]}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[pytest]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
python_files = "tests/*.py"


