[project]
name = "hexlet-code"
version = "0.1.0"
description = "Менеджер задач."
readme = "README.md"
requires-python = ">=3.11"

authors = [{ name = "Pavel Anikin", email = "PavelDidko@gmail.com" }]

dependencies = [
  "django>=5.2.7",
  "gunicorn>=23.0.0",
  "psycopg2-binary>=2.9.9",
  "python-dotenv>=0.21.0",
  "requests>=2.32.4",
  "dj-database-url>=2.3.0",
  "django-bootstrap5>=24.3",
  "django-filter>=24.3",
  "rollbar>=0.18.0"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.14.1",
  "uv>=0.5.16",
  "pytest>=8.4.2",
  "pytest-django>=4.11.1"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["task_manager"]
package-dir = {"" = "."}
package-data = { "task_manager" = ["templates/**/*"] }

[tool.ruff]
line-length = 120
select = ["E", "W", "F", "I"]
ignore = ["I001"]
exclude = ["*/migrations/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "task_manager.settings"
python_files = "tests/*.py"

[dependency-groups]
dev = [
    "pytest-django>=4.11.1",
]
